--- a/.config
+++ b/.config
@@ -11,7 +11,7 @@ CONFIG_TARGET_ath79_generic_DEVICE_phicomm_k2t=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs is not set
 # CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk is not set
-CONFIG_PACKAGE_luci-app-filetransfer=y
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 CONFIG_PACKAGE_luci-app-turboacc=y
@@ -28,7 +28,6 @@ CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 # CONFIG_PACKAGE_luci-lib-fs is not set
 # CONFIG_PACKAGE_miniupnpd is not set
 # CONFIG_PACKAGE_pdnsd-alt is not set
-CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_luci-app-ddns=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
-CONFIG_PACKAGE_luci-theme-argon=y
